# mpi

./: CMakeLists.txt  README.md
data/: matrix.txt
src/: image_process.cpp  image_process.h  main.cpp  read_config.cpp  read_config.h  update.cpp  update.h
